# boilerplate-conan

./: .gitignore  .gitlab-ci.yml  README.md  conanfile.py  pyproject.toml
.github/actions/init-conan/: action.yml
.github/workflows/: codeql-analysis.yml  conan-ci.yml
docs/: getting-start.md  test.md
reports/bandit/: gl-sast-report.json
reports/flawfinder/: gl-sast-report.json
reports/semgrep/: gl-sast-report.json
src/: CMakeLists.txt  main.cpp  md5.cpp  md5.h  sample.cpp  sample.h
src/flawfinder/: README.md  test.c
test/: conanfile.py  example.cpp
