[tool.poetry]
authors = ["kannkyo <15080890+kannkyo@users.noreply.github.com>"]
description = "Sample for conan"
license = "MIT"
name = "boilerplate-conan"
version = "0.1.0"

[tool.poetry.dependencies]
conan = "^2.4.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^2.3.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
